# afp

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
include/afp/: afp.h  audio.hpp  build.hpp  identify.hpp  keys.hpp  kv.hpp  lib.hpp  pack.hpp  pairing.hpp  peaks.hpp  rank.hpp  scale.hpp  stft.hpp  types.hpp  util.hpp
lib/: dr_flac.h  dr_mp3.h  dr_wav.h
src/afp/: afp.cpp  audio.cpp  build.cpp  identify.cpp  keys.cpp  kv.cpp  lib.cpp  pack.cpp  peaks.cpp  rank.cpp  scale.cpp  stft.cpp  types.cpp  util.cpp
tests/assets/: tiny_stereo.flac
